[project]
name = "python-music-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>2.0.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "type-extensions>=0.1.2",
]
